--- a/style.css
+++ b/style.css
@@ -88,19 +88,21 @@ h2 {
     border: 3px solid black;
     border-radius:10px;
     padding:10px;
-    margin-top:10%;
+    margin-top:5%;
     word-wrap: break-word;
     display:inline-block;
     cursor: pointer;
 }
-#page1 {
+#leftbox {
   float:left;
   margin-left:10%;
 }
 
+#page7 {
+  margin-right:5%;
+}
 
-
-#page3 {
+#rightbox {
   float:right;
   margin-right:10%
 }
