--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: grey;
+  background-color: rgb(191, 191, 191);
   font-family: Arial, sans-serif;
   color: black;
   min-height: 100vh;
@@ -8,9 +8,15 @@ body {
 }
 
 h2 {
-  text-align:center;
+  padding-bottom:10px;
+  background-color:lightblue;
+  margin-top:0;
+  padding-top:10px;
+  border-radius:10px;
+  border-bottom-left-radius:0;
+  border-bottom-right-radius:0;
   border-bottom:3px solid black;
-  padding-bottom:3px;
+  text-align:center;
 }
 
 .stickymain {
@@ -25,7 +31,7 @@ h2 {
     font-size: 80px;
     border-radius:10px;
     color:black;
-    background-color: rgb(219, 219, 50);
+    background-color: lightblue;
     color: black;
     padding-bottom: 10px;
     padding-top: 10px;
@@ -35,7 +41,7 @@ h2 {
 }
 
 .topnav {
-    background-color: rgb(219, 219, 50);
+    background-color: black;
     color: black;
     overflow: hidden;
     border-radius:5px;
@@ -48,7 +54,7 @@ h2 {
 
 .topnav a {
     display: inline-block;
-    background-color: rgb(219, 219, 50);
+    background-color: lightblue;
     color: black;
     text-align: center;
     padding: 14px 16px;
@@ -61,12 +67,11 @@ h2 {
 }
 
 .overview {
-    background-color:rgb(219, 219, 50);
+    background-color:white;
     width:60%;
-    border: 3px solid black;
     border-radius:10px;
     margin:auto;
-    padding:10px;
+    margin-bottom:5%;
     margin-top:5%;
     word-wrap: break-word;
     text-align:center;
@@ -74,7 +79,11 @@ h2 {
 
 #ovrhead {
     font-size:42px;
-    padding-bottom:30px;
+    padding-bottom:10px;
+    background-color:lightblue;
+    margin-top:0;
+    padding-top:10px;
+    border-radius:10px;
     border-bottom:6px solid black;
 }
 
@@ -83,11 +92,9 @@ h2 {
 }
 
 .pagebox {
-    background-color:rgb(219, 219, 50);
+    background-color:white;
     width:20%;
-    border: 3px solid black;
     border-radius:10px;
-    padding:10px;
     margin-top:5%;
     word-wrap: break-word;
     display:inline-block;
@@ -113,12 +120,10 @@ h2 {
 }
 
 .leftbox {
-  background-color:rgb(219, 219, 50);
+  background-color:white;
   width:80%;
-  border: 3px solid black;
-  border-radius:10px;
   padding:10px;
-  margin-top:5%;
+  border-radius:10px;
   margin-bottom:2%;
   word-wrap: break-word;
   float:left;
@@ -126,20 +131,28 @@ h2 {
 }
 
 .rightbox {
-  background-color:rgb(219, 219, 50);
+  background-color:white;
   width:80%;
-  border: 3px solid black;
-  border-radius:10px;
   padding:10px;
+  border-radius:10px;
   margin-bottom:2%;
-  margin-top:5%;
   word-wrap: break-word;
   margin-left:auto;
 }
 
+#leftbib {
+  width:45%;
+  float:left;
+}
+
+#rightbib {
+  width:45%;
+  float:right;
+}
+
 footer {
   text-align:center;
-  background-color:rgb(219, 219, 50);
+  background-color:lightblue;
   font-size: 14px;
   margin-top: auto;
 }
