--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h2 {
   border-radius:10px;
   border-bottom-left-radius:0;
   border-bottom-right-radius:0;
-  border-bottom:3px solid black;
+  
   text-align:center;
 }
 
@@ -85,10 +85,12 @@ h2 {
     padding-top:10px;
     border-radius:10px;
     border-bottom:6px solid black;
+    border-bottom-left-radius:0;
+    border-bottom-right-radius:0;
 }
 
 #ovrcont {
-    font-size:28px;  
+    font-size:24px;  
 }
 
 .pagebox {
